--- a/style/logarithm.css
+++ b/style/logarithm.css
@@ -103,3 +103,27 @@ img{-webkit-user-drag: none;}
 .msg-magick-text {
     color: #bb39d7;
 }
+.footer {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    background-color: #f5f5f5;
+}
+.footer .footer-brand {
+    float: left;
+}
+.footer ul {
+    margin-bottom: 0;
+    padding: 0;
+    list-style: none;
+}
+.footer .pull-center {
+    display: inline-block;
+    float: none;
+}
+.footer ul li {
+    display: inline-block;
+}
